syntax = "proto3";

import "google/protobuf/any.proto";

package api;

message IBackendGRPC {
  repeated string error = 1; 
  string message = 2; 
  bool status = 3;
  string data = 4;
  int32 code = 5; 
}

message Meta {
  int32 current = 1;
  int32 pageSize = 2;
  int32 totalPage = 3; 
  int32 totalItem = 4; 
}

message IModelPaginate {
  Meta meta = 1; 
  repeated google.protobuf.Any result = 2;
}
